Adding new files

--- a/Dataset Analysis.ipynb
+++ b/Dataset Analysis.ipynb
@@ -2846,10 +2846,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EYLE, PETRONA 450\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "# Turning lat long to address\n",
+    "URL=\"https://ws.usig.buenosaires.gob.ar/geocoder/2.2/reversegeocoding\"\n",
+    "# X is longitude and Y is latitude\n",
+    "params = {'x':'-58.362112', 'y':'-34.614567'}\n",
+    "response = requests.get(URL,params=params)\n",
+    "json_data = json.loads(response.text[1:-1])\n",
+    "print(json_data['puerta'])"
+   ]
   }
  ],
  "metadata": {
