--- a/Application.ipynb
+++ b/Application.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import requests\n",
     "import json\n",
     "from datetime import datetime\n",
-    "from functions import *\n",
+    "from data_bike import *\n",
     "import sqlalchemy\n",
     "from sqlalchemy  import create_engine\n",
     "from geopy import Point\n",
